Add lock file maintenance schedule

--- a/project.json
+++ b/project.json
@@ -6,6 +6,7 @@
   "lockFileMaintenance": {
     "enabled": true,
     "automerge": true,
-    "addLabels": ["automerge"]
+    "addLabels": ["automerge"],
+    "schedule": ["every weekend"]
   }
 }
