Pin project dependencies

--- a/project.json
+++ b/project.json
@@ -2,7 +2,7 @@
   "extends": [
     "github>benjaminmal/renovate-config"
   ],
-  "rangeStrategy": "update-lockfile",
+  "rangeStrategy": "pin",
   "lockFileMaintenance": {
     "enabled": true,
     "automerge": true,
