--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Continuous Integration
+name: 'Continuous Integration'
 
 on:
   pull_request: ~
@@ -11,33 +11,35 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
-    name: 🚧 Build 🚧
+    name: '🚧 Build 🚧 | Node ${{ matrix.node }}'
 
     strategy:
       matrix:
-        node: [16.x]
+        node: ['16.x']
 
     steps:
     
       # --- ⚙️ Setup ⚙️ ----------
 
-      - name: Checkout
+      - name: 'Checkout'
         uses: actions/checkout@v3
 
-      - name: Setup node
+      - name: 'Setup node'
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Cache node
+      - name: 'Cache node'
         uses: actions/cache@v2
         with:
           path: ~/.npm
-          key: ${{ runner.os }}-node
+          key: ${{ runner.os }}-node-${{ matrix.node }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
       # --- 🛠 Test 🛠 ----------
 
-      - name: Validate renovate
+      - name: 'Validate renovate'
         uses: rinchsan/renovate-config-validator@v0.0.10
         with:
           pattern: '*.json'
