--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>benjaminmal/renovate-config:library"
+    "local>e-lodgy/renovate-config:library"
   ]
 }
